fix: remove unnecessary git-gap property

--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -15,7 +15,6 @@
     margin-bottom: 0;
     grid-template-columns: 294px 1fr;
     column-gap: 18px;
-    row-gap: 7px;
     grid-template-areas:
       'name edit-button'
       'about about';
